--- a/elm_qd/index.html
+++ b/elm_qd/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+      <meta name="referrer" content="no-referrer">
     <link rel="icon" href="/favicon.ico">
       <style>
           *
